<resources>
    <string name="app_name">TaskMate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="one_time">One-Time</string>
    <string name="weekly">Weekly</string>
    <string name="dueon">"Due on: "</string>
    <string name="_12pm">12:00PM</string>
    <string name="delete">Delete</string>
    <string name="enter_task_title">Enter task title</string>
    <string name="enter_task_description">Enter task description</string>
    <string name="select_time">Select time</string>
    <string name="select_date">Select date</string>
    <string name="export_sqlite">Export SQLite</string>
    <string name="schedule_type">Schedule Type</string>
</resources>